# cognitive-analysis-human-analyasis

./: GEMINI.md  README.md  main.py  requirements.txt  run_linux.sh  run_windows.bat
backend/: .env.example  .gitignore  app.py  main.py  pyproject.toml  run.sh
backend/backend/chroma_db/: chroma.sqlite3
backend/samples/: sample_valid.cog
backend/src/: ai_analyzer.py  errors.py  parser.py  report.py  semantic.py  tokens.py  utils.py
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: mode-toggle.tsx  session-report.tsx
reports/: sample_errors_report.html  sample_errors_report.json  sample_valid_report.html  sample_valid_report.json
samples/: sample_errors.cog
src/: ast_nodes.py  cognitive.py  lexer.py
